# yacs

./: README.md
full-build-system/: CMakeLists.txt  README.md  conanfile.txt
full-build-system/src/: hello.cpp  hello.hpp  main.cpp
full-build-system/tests/: catch-main.cpp  test-01-hello.cpp
minimal/: README.md  makefile
minimal/src/: hello.cpp  hello.hpp  main.cpp
minimal/tests/: catch-main.cpp  test-01-hello.cpp
